Update menu structure and fix layout issues in UI
Updated section titles to better reflect menu categories and added new sections such as Bakery and Garniers. Fixed the logo path and adjusted layout spacing for better alignment in the header. Updated placeholder values like the total price in the footer for a more realistic display.

--- a/css/index.css
+++ b/css/index.css
@@ -187,6 +187,7 @@ footer .total-price {
 
 
 
+
 /* General Reset */
 * {
   margin: 0;
@@ -245,7 +246,7 @@ header {
 
 .title {
   text-align: center;
-  margin-left:20px;
+  margin-left:100px;
 }
 
 .title .small-text {
@@ -453,6 +454,7 @@ footer .order-button:hover {
   --border-radius: 16px;
 
 }
+
 
 
 
